--- a/Rebuild-IOSVB/Model/Home.storyboard
+++ b/Rebuild-IOSVB/Model/Home.storyboard
@@ -15,7 +15,80 @@
                     <view key="view" contentMode="scaleToFill" id="4jo-h6-g4a">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xn5-Ff-qaX">
+                                <rect key="frame" x="0.0" y="44" width="414" height="692"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="BodyTableViewCell" rowHeight="80" id="9iq-95-7Qp" customClass="BodyTableViewCell" customModule="Rebuild_IOSVB" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9iq-95-7Qp" id="PhG-CI-3CX">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_cards_missing_card_picture-default" translatesAutoresizingMaskIntoConstraints="NO" id="dMp-2W-KBp">
+                                                    <rect key="frame" x="10" y="10" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="dMp-2W-KBp" secondAttribute="height" id="e4V-Cp-5li"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FORESTCARD FAIL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CkZ-LH-u1B">
+                                                    <rect key="frame" x="90" y="20" width="154" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="qV7-uo-WKS"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wCe-bS-e62">
+                                                    <rect key="frame" x="20" y="79.666666666666671" width="374" height="0.3333333333333286"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="0.29999999999999999" id="U9a-HU-165"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="dMp-2W-KBp" firstAttribute="leading" secondItem="PhG-CI-3CX" secondAttribute="leading" constant="10" id="Gev-rA-SPJ"/>
+                                                <constraint firstItem="CkZ-LH-u1B" firstAttribute="centerY" secondItem="PhG-CI-3CX" secondAttribute="centerY" id="LX9-7N-w4D"/>
+                                                <constraint firstItem="wCe-bS-e62" firstAttribute="leading" secondItem="PhG-CI-3CX" secondAttribute="leading" constant="20" id="XzJ-k0-1LV"/>
+                                                <constraint firstItem="dMp-2W-KBp" firstAttribute="top" secondItem="PhG-CI-3CX" secondAttribute="top" constant="10" id="YwL-ii-UzV"/>
+                                                <constraint firstAttribute="trailing" secondItem="wCe-bS-e62" secondAttribute="trailing" constant="20" id="hBR-rk-Rnh"/>
+                                                <constraint firstItem="dMp-2W-KBp" firstAttribute="centerY" secondItem="PhG-CI-3CX" secondAttribute="centerY" id="ipO-Jp-Hub"/>
+                                                <constraint firstAttribute="bottom" secondItem="wCe-bS-e62" secondAttribute="bottom" id="pvK-a6-twH"/>
+                                                <constraint firstAttribute="bottom" secondItem="dMp-2W-KBp" secondAttribute="bottom" constant="10" id="q3l-Oj-DcS"/>
+                                                <constraint firstItem="CkZ-LH-u1B" firstAttribute="leading" secondItem="dMp-2W-KBp" secondAttribute="trailing" constant="20" id="uht-vw-5Fx"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imgCard" destination="dMp-2W-KBp" id="amy-MQ-giS"/>
+                                            <outlet property="lbTitleCard" destination="CkZ-LH-u1B" id="G6E-79-a3z"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="ys0-hL-fzH">
+                                        <rect key="frame" x="0.0" y="108" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ys0-hL-fzH" id="uGo-kV-j55">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="L8d-QW-Q3g" id="s8I-H6-Wsv"/>
+                                    <outlet property="delegate" destination="L8d-QW-Q3g" id="Koo-vZ-aYi"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="xn5-Ff-qaX" firstAttribute="top" secondItem="Wif-5y-gEG" secondAttribute="top" id="4Gs-lB-t45"/>
+                            <constraint firstItem="Wif-5y-gEG" firstAttribute="bottom" secondItem="xn5-Ff-qaX" secondAttribute="bottom" id="Hsl-64-9Nf"/>
+                            <constraint firstItem="Wif-5y-gEG" firstAttribute="trailing" secondItem="xn5-Ff-qaX" secondAttribute="trailing" id="Pp2-M3-7rf"/>
+                            <constraint firstItem="xn5-Ff-qaX" firstAttribute="leading" secondItem="Wif-5y-gEG" secondAttribute="leading" id="dvs-H1-2NH"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Wif-5y-gEG"/>
                     </view>
                     <navigationItem key="navigationItem" id="e1X-oR-u11">
@@ -24,6 +97,7 @@
                                 <action selector="didTapMenu:" destination="L8d-QW-Q3g" id="F1a-a8-xnn"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" image="magnifyingglass" catalog="system" id="7xU-81-S93"/>
                     </navigationItem>
                     <connections>
                         <outlet property="btnMenu" destination="3bh-et-pGh" id="8Pt-po-tN2"/>
@@ -31,7 +105,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SG0-Xb-4IH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1100" y="67.663043478260875"/>
+            <point key="canvasLocation" x="1098.5507246376812" y="67.663043478260875"/>
         </scene>
         <!--Menu Table View Controller-->
         <scene sceneID="amh-OB-EJX">
@@ -85,6 +159,11 @@
                                                 <constraint firstAttribute="bottom" secondItem="VdW-Wi-ENc" secondAttribute="bottom" id="e7J-Ol-sWL"/>
                                                 <constraint firstItem="VdW-Wi-ENc" firstAttribute="leading" secondItem="Cfo-Rq-aB8" secondAttribute="leading" constant="20" id="vNS-X2-DRu"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="subviews">
+                                                    <exclude reference="VdW-Wi-ENc"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="75" id="xGP-Sb-oXT">
@@ -128,6 +207,11 @@
                                                 <constraint firstItem="Q2f-5A-nzW" firstAttribute="leading" secondItem="q8P-aC-ZiX" secondAttribute="leading" constant="5" id="yUN-db-hcZ"/>
                                                 <constraint firstItem="nAr-WB-0PI" firstAttribute="centerY" secondItem="Q2f-5A-nzW" secondAttribute="centerY" id="z5b-XH-VW8"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="subviews">
+                                                    <exclude reference="bvE-5F-8eW"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="75" id="te9-kt-dCU">
@@ -171,6 +255,11 @@
                                                 <constraint firstItem="05S-MK-on4" firstAttribute="leading" secondItem="jz6-aY-Prg" secondAttribute="leading" constant="20" id="y8B-dW-fQl"/>
                                                 <constraint firstItem="4ru-fS-86I" firstAttribute="leading" secondItem="jz6-aY-Prg" secondAttribute="leading" constant="5" id="zEc-7Z-f2n"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="subviews">
+                                                    <exclude reference="05S-MK-on4"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="75" id="ug4-QN-6YU">
@@ -214,6 +303,11 @@
                                                 <constraint firstItem="W2j-Uv-P4a" firstAttribute="leading" secondItem="OJh-MB-YQh" secondAttribute="leading" constant="5" id="qLH-ly-lSt"/>
                                                 <constraint firstAttribute="bottom" secondItem="BVH-8t-JqB" secondAttribute="bottom" id="vbJ-mD-v5B"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="subviews">
+                                                    <exclude reference="BVH-8t-JqB"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="75" id="Rtf-L1-3hl">
@@ -257,6 +351,11 @@
                                                 <constraint firstItem="d62-ej-ec6" firstAttribute="leading" secondItem="xxz-Al-UwX" secondAttribute="leading" constant="5" id="wI6-sl-9IC"/>
                                                 <constraint firstItem="d62-ej-ec6" firstAttribute="centerY" secondItem="xxz-Al-UwX" secondAttribute="centerY" id="xWe-Sn-qEA"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="subviews">
+                                                    <exclude reference="IpX-ov-V99"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
@@ -267,10 +366,11 @@
                             <outlet property="delegate" destination="Lw3-hc-MaD" id="ibI-Fo-4BM"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="AVd-T7-w1i"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lLh-el-qGD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1886.9565217391305" y="-350.54347826086962"/>
+            <point key="canvasLocation" x="425" y="-696"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="0nc-tR-gNO">
@@ -294,9 +394,11 @@
     <resources>
         <image name="Account" width="128" height="128"/>
         <image name="Card" width="100" height="100"/>
+        <image name="default_cards_missing_card_picture-default" width="60" height="38"/>
         <image name="icons8-bank-building-100" width="100" height="100"/>
         <image name="icons8-menu-100" width="20" height="20"/>
         <image name="icons8-tax-100" width="100" height="100"/>
         <image name="icons8-transaction-100" width="100" height="100"/>
+        <image name="magnifyingglass" catalog="system" width="64" height="56"/>
     </resources>
 </document>
